# web-window-manager

./: Cargo.toml  LISENSE  README.md
src/: main.rs
src/templates/: index.hbs
templates/: index.html
