[package]
name = "web-window-manager"
version = "0.1.0"
authors = ["Iamshayankarami <ftfsk8203@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.5"
serde = { version = "1.0", features = ["derive"] }

[dependencies.rocket_contrib]
version = "0.4.5"
features = ["handlebars_templates", "tera_templates"]
